# pretty

./: .gitignore  .travis.yml  Bench1.hs  CHANGELOG  CHANGELOG.md  README  README.md  TODO  cabal.haskell-ci  cabal.project  pretty.cabal  prologue.txt  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml  mhs-ci.yml
Text/: PrettyPrint.hs  PrettyPrint2.hs
Text/PrettyPrint/: Core.hs  HughesPJ.hs  Internal.hs
bench/: Bench.hs
src/Text/: PrettyPrint.hs
src/Text/PrettyPrint/: Annotated.hs  Core.hs  HughesPJ.hs  HughesPJClass.hs  ListLike.hs  Reader.hs  String.hs  TextLazy.hs  TextStrict.hs
src/Text/PrettyPrint/Annotated/: HughesPJ.hs  HughesPJClass.hs  ListLike.hs  String.hs  TextLazy.hs  TextStrict.hs
src/Text/PrettyPrint/Annotated/HughesPJClass/: ListLike.hs  String.hs  TextLazy.hs  TextStrict.hs
src/Text/PrettyPrint/HughesPJClass/: ListLike.hs  String.hs  TextLazy.hs  TextStrict.hs
test/: Bench1.hs  BugSep.hs  Main.hs  Test.hs
tests/: BugSep.hs  PrettyTestVersion.hs  Test.hs  TestGenerators.hs  TestLargePretty.hs  TestStructures.hs  TestUtils.hs  Text.hs  UnitLargeDoc.hs  UnitPP1.hs  UnitT3911.hs  all.T
