name:          pretty
version:       1.1.1.1
synopsis:      Pretty-printing library
description:
        This package contains a pretty-printing library, a set of API's
        that provides a way to easily print out text in a consistent
        format of your choosing. This is useful for compilers and related
        tools.
        .
        This library was originally designed by John Hughes's and has since
        been heavily modified by Simon Peyton Jones.

license:       BSD3
license-file:  LICENSE
category:      Text
maintainer:    David Terei <code@davidterei.com>
homepage:      http://github.com/haskell/pretty
bug-reports:   http://github.com/haskell/pretty/issues
stability:     Stable
build-type:    Simple
Extra-Source-Files: README.md CHANGELOG.md
Cabal-Version: >= 1.8

source-repository head
    type:     git
    location: http://github.com/haskell/pretty.git

Library
    hs-source-dirs: src
    exposed-modules:
        Text.PrettyPrint
        Text.PrettyPrint.HughesPJ
    build-depends: base >= 3 && < 5
    extensions: CPP, BangPatterns
    ghc-options: -Wall -fwarn-tabs

Test-Suite test-pretty
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
                    src
    build-depends: base >= 3 && < 5,
                   QuickCheck >= 2.5 && <3
    main-is: Test.hs
    other-modules:
        TestGenerators
        TestStructures
    extensions: CPP, BangPatterns
    include-dirs: src/Text/PrettyPrint

-- Executable Bench1
--     main-is: Bench1.hs
--     hs-source-dirs: test
--                     src
--     other-modules:
--         Text.PrettyPrint
--         Text.PrettyPrint.HughesPJ
--     extensions: CPP, BangPatterns
--     ghc-options: -O -fwarn-tabs

