cabal-version: 1.18
name:          pretty
version:       1.1.3.6
synopsis:      Pretty-printing library
description:
        This package contains a pretty-printing library, a set of API's
        that provides a way to easily print out text in a consistent
        format of your choosing. This is useful for compilers and related
        tools.
        .
        This library was originally designed by John Hughes and has since
        been heavily modified by Simon Peyton Jones.

license:       BSD3
license-file:  LICENSE
category:      Text
maintainer:    David Terei <code@davidterei.com>
homepage:      https://github.com/haskell/pretty
bug-reports:   https://github.com/haskell/pretty/issues
stability:     Stable
build-type:    Simple

-- extra-doc-files supported since cabal-version 1.18
extra-doc-files:
  README.md
  CHANGELOG.md

tested-with:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
    type:     git
    location: https://github.com/haskell/pretty.git

Library
    hs-source-dirs: src
    exposed-modules:
        Text.PrettyPrint
        Text.PrettyPrint.HughesPJ
        Text.PrettyPrint.HughesPJClass
        Text.PrettyPrint.Annotated
        Text.PrettyPrint.Annotated.HughesPJ
        Text.PrettyPrint.Annotated.HughesPJClass

    build-depends: base >= 4.5 && < 5,
                   deepseq >= 1.1
    if impl(ghc)
      build-depends: ghc-prim

    default-language: Haskell98
    default-extensions: CPP, BangPatterns, DeriveGeneric
    ghc-options: -Wall -fwarn-tabs

Test-Suite test-pretty
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: tests
                    src
    include-dirs: src/Text/PrettyPrint/Annotated
    other-modules:
        Text.PrettyPrint.Annotated.HughesPJ
        Text.PrettyPrint.HughesPJ
        PrettyTestVersion
        TestGenerators
        TestStructures
        TestUtils
        UnitLargeDoc
        UnitPP1
        UnitT3911
        UnitT32

    build-depends: base >= 4.5 && < 5,
                   deepseq >= 1.1,
                   ghc-prim,
                   QuickCheck >= 2.5 && <3

    default-language: Haskell98
    default-extensions: CPP, BangPatterns, DeriveGeneric
    ghc-options: -rtsopts -with-rtsopts=-K2M

benchmark pretty-bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs: bench

  build-depends: base >= 4.5 && < 5
               , criterion
               , pretty

  default-language: Haskell98
  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N1
    -with-rtsopts=-s
    -with-rtsopts=-qg
